--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
+    "angular2-template-loader": "^0.4.0",
     "css-loader": "^0.23.1",
     "empty-string-loader": "^0.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
